# PythonMicroservice

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile-InoversityLibrary  Dockerfile-LimitRecommendations  LICENSE  README.md  alembic.ini  azure-image-deploy-pipeline.yml  azure_image_deploy_jobs_template.yaml  docker-compose.yaml  entry_point.sh  global_configuration.json  global_configuration_template.json  library_management_system.puml  library_management_system_minimal_version.puml  main.py  pyproject.toml  requirements.txt  setup.py
database_migrations/: env.py
database_migrations/scripts/mssql/: Dockerfile  configure_db.sh  entrypoint.sh  initialize_db.sql
database_migrations/versions/: 346d276315d0_init.py  768c1be391cd_added_link_between_user_and_account_.py  c0e39508b75f_init.py
microservice_mysql_entry_point.d/: mysql.sql
src/: __init__.py  app_definitions.py
src/application/: __init__.py  abstract_domain_service.py
src/application/common/: __init__.py
src/application/services/: book_service.py
src/business_domain/models/: book.py
src/business_domain/services/: book_service.py
src/common/: locations.py  singleton_decorator.py
src/data_access/: __init__.py  context.py
src/data_access/repositories/: __init__.py  account_repository.py  (+4 more)
src/infrastructure/: __init__.py  locations.py  logger.py  stopwatch.py  thread_manager.py
src/schedules/: cuckoo_clock_schedule.py  queue_batch_schedule.py  scheduler.py
src/services/: __init__.py
tests/: InoversityLibraryModel.db  conftest.py  test_api.py  test_user_loaning_ability.py
(+67 files in other folders)
